# storageshower

./: .gitignore  Cargo.toml  README.md  storageshower.default.conf
benches/: bench.rs
completions/: _storageshower
docs/: index.html  report.html
src/: app.rs  cli.rs  columns.rs  helpers.rs  input.rs  keys.rs  lib.rs  main.rs  mouse.rs  prefs.rs  system.rs  testutil.rs  types.rs  ui.rs
tests/: app_all_themes_builtin_collision_integration.rs  app_bookmarks_four_mounts_integration.rs  app_bookmarks_integration.rs  app_bookmarks_sort_modes_integration.rs  app_bookmarks_sort_rev_integration.rs  app_filter_bookmark_combo_integration.rs  app_filter_integration.rs  app_filter_paths_integration.rs  app_filter_unicode_mount_integration.rs  app_show_local_filter_integration.rs  app_sort_and_columns.rs  app_sort_equal_total_stable_integration.rs  app_sort_name_bookmark_one_integration.rs  app_sort_name_four_bookmarks_integration.rs  app_sort_name_three_bookmarks_integration.rs  app_sort_name_two_bookmarks_integration.rs  app_sort_name_unicode_integration.rs  app_sort_pct_bookmark_one_integration.rs  app_sort_pct_four_bookmarks_integration.rs  app_sort_pct_same_total_integration.rs  app_sort_pct_three_bookmarks_integration.rs  app_sort_pct_three_mounts_integration.rs  app_sort_pct_two_bookmarks_integration.rs  app_sort_rev_pct_size_integration.rs  app_sort_size_four_bookmarks_integration.rs  app_sort_size_same_total_stable_integration.rs  app_sort_size_single_bookmark_integration.rs  app_sort_size_three_bookmarks_integration.rs  app_sort_size_two_bookmarks_integration.rs  app_sort_three_mounts_integration.rs  app_tmpfs_show_all_integration.rs  app_update_sorted_empty_disks_integration.rs  cli_all_value_enums.rs  cli_apply_bar_ascii_sort_pct_integration.rs  cli_apply_bar_color_combo_integration.rs  cli_apply_bar_style_all_integration.rs  cli_apply_bar_style_no_local_integration.rs  cli_apply_bar_style_sort_no_local_integration.rs  cli_apply_bars_border_positive_integration.rs  cli_apply_bars_full_mount_no_local_integration.rs  (+1296 more)
themes/: acid_rain.toml  data_stream.toml  ghost_wire.toml  ice_breaker.toml  neon_sprawl.toml  red_sector.toml  rust_belt.toml  sakura_den.toml  (+2 more)
(+4 files in other folders)
