[package]
name = "storageshower"
version = "0.1.0"
edition = "2021"
description = "Cyberpunk disk usage TUI"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.32"
dirs = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
toml = "0.8"

[[bench]]
name = "bench"
harness = false

[profile.release]
opt-level = 3
lto = true
strip = true
