[package]
name = "storageshower"
version = "0.16.0"
edition = "2021"
description = "Cyberpunk disk usage TUI"
license = "MIT"
repository = "https://github.com/MenkeTechnologies/storageshower"
homepage = "https://github.com/MenkeTechnologies/storageshower"
keywords = ["tui", "disk", "cyberpunk", "terminal", "monitoring"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.32"
dirs = "5"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"

[[bench]]
name = "bench"
harness = false

[profile.release]
opt-level = 3
lto = true
strip = true
