[package]
name = "storageshower"
version = "0.28.3"
edition = "2024"
description = "Cyberpunk disk usage TUI"
license = "MIT"
repository = "https://github.com/MenkeTechnologies/storageshower"
homepage = "https://github.com/MenkeTechnologies/storageshower"
keywords = ["tui", "disk", "cyberpunk", "terminal", "monitoring"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
sysinfo = "0.38"
dirs = "6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1.1"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
serde_json = "1"
tempfile = "3"
toml = "1.1"

[[bench]]
name = "bench"
harness = false

[profile.release]
opt-level = 3
lto = true
strip = true
